# imo

./: .env  .gitignore  README.md  io.github.c0d3dump.vectorchat.appdata.xml  io.github.c0d3dump.vectorchat.desktop  io.github.c0d3dump.vectorchat.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: flatpak.yml
src/: chat.py  schemas.py
src/components/: folder_selector.py  welcome_dialog.py
src/scripts/: config.py  database.py  file.py  llm.py  utils.py
